[gd_scene load_steps=18 format=2]

[ext_resource path="res://resources/transitions/talk_cloud_tail.png" type="Texture" id=1]
[ext_resource path="res://resources/transitions/talk_cloud.png" type="Texture" id=2]
[ext_resource path="res://resources/transitions/mapa_cidade_ponto_de_fuga.png" type="Texture" id=3]
[ext_resource path="res://sources/game/transitions/MachadoDrugstoreTalk.gd" type="Script" id=4]
[ext_resource path="res://resources/transitions/machado.png" type="Texture" id=5]
[ext_resource path="res://sources/common/shaders/PixelPerfect.gdshader" type="Shader" id=6]
[ext_resource path="res://resources/transitions/empty.png" type="Texture" id=7]
[ext_resource path="res://resources/fonts/VillainTeamUpSpiked-2Ov5e.otf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/transitions/imagem 1.png" type="Texture" id=9]
[ext_resource path="res://resources/transitions/talk_cloud_straigth.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_color = Color( 0.768627, 0.768627, 0.768627, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 26
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 56
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="MachadoDrugstoreTalk" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_right = -360.0
margin_bottom = -643.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllScenery" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="AllScenery"]
margin_left = -351.847
margin_right = -311.847
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundTexture1" type="TextureRect" parent="AllScenery/Background"]
material = SubResource( 1 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 620.0
margin_bottom = 620.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture2" type="TextureRect" parent="AllScenery/Background"]
material = SubResource( 5 )
margin_left = 353.0
margin_right = 713.0
margin_bottom = 640.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarchadoWoodTexture" type="TextureRect" parent="AllScenery"]
material = SubResource( 2 )
margin_left = -234.5
margin_top = 320.0
margin_right = 85.5
margin_bottom = 640.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonTalk" type="Control" parent="AllScenery"]
visible = false
margin_left = -351.847
margin_right = -311.847
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="AllScenery/PersonTalk"]
material = SubResource( 3 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 68.0
margin_right = 340.0
margin_bottom = 688.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkLabel" type="Label" parent="AllScenery/PersonTalk"]
anchor_left = 0.5
anchor_top = 4.299
anchor_right = 8.51
anchor_bottom = 9.344
margin_left = -1.0
margin_top = 21.04
margin_right = 0.599976
margin_bottom = 22.24
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelfTalk" type="Control" parent="AllScenery"]
visible = false
margin_left = -358.5
margin_top = 309.5
margin_right = -318.5
margin_bottom = 349.5
rect_scale = Vector2( 0.71074, 0.71074 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="AllScenery/SelfTalk"]
modulate = Color( 0.352941, 0.752941, 0.94902, 1 )
material = SubResource( 3 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.64
margin_top = 129.443
margin_right = 409.36
margin_bottom = 627.443
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkLabel" type="Label" parent="AllScenery/SelfTalk"]
anchor_left = 1.0
anchor_top = 5.741
anchor_right = 7.42
anchor_bottom = 9.766
margin_left = 6.0
margin_top = 1.35999
margin_right = -7.80002
margin_bottom = -0.640015
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonCall" type="Control" parent="AllScenery"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 265.0
margin_bottom = 265.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="AllScenery/PersonCall"]
material = SubResource( 3 )
anchor_left = 0.078
anchor_top = -0.759
anchor_right = 2.087
anchor_bottom = 1.239
margin_left = -135.08
margin_top = 538.76
margin_right = -218.32
margin_bottom = -99.9601
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkLabel" type="Label" parent="AllScenery/PersonCall"]
anchor_top = 0.277
anchor_right = 1.0
anchor_bottom = 0.59
margin_left = 64.0
margin_top = 7.72
margin_right = 7.0
margin_bottom = -5.60004
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 6 )
text = "Ei vocÃª!"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickAreas" type="Node2D" parent="AllScenery"]

[node name="NextTalk" type="TouchScreenButton" parent="AllScenery/ClickAreas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -352.5, 1.5 )
scale = Vector2( 1.35938, 2.48633 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="ChangeView" type="TouchScreenButton" parent="AllScenery/ClickAreas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2.50003, 4 )
scale = Vector2( 0.833984, 2.48047 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="CameraMoveTween" type="Tween" parent="."]

[node name="GenericTimer" type="Timer" parent="."]

[connection signal="pressed" from="AllScenery/ClickAreas/NextTalk" to="." method="_on_NextTalk_pressed"]
[connection signal="pressed" from="AllScenery/ClickAreas/ChangeView" to="." method="_on_ChangeView_pressed"]
[connection signal="tween_all_completed" from="CameraMoveTween" to="." method="_on_Tween_tween_all_completed"]
